--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,10 @@
     <artifactId>microservices</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    
+
     <modules>
         <module>customer</module>
+        <module>fraud</module>
     </modules>
 
     <name>microservices</name>
