--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     username: 'microservices'
     password: 'microservices'
-    url: jdbc:postgresql://[::1]:5051/customer
+    url: jdbc:postgresql://localhost:5051/customer
   jpa:
     properties:
       hibernate:
@@ -16,6 +16,8 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: 'true'
+    zipkin:
+      base-url: http://localhost:9411
 eureka:
   client:
     service-url:
