--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>eureka-server</module>
         <module>clients</module>
         <module>notification</module>
+        <module>apigw</module>
     </modules>
 
     <name>microservices</name>
@@ -60,7 +61,7 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
- 
+
     </dependencies>
 
     <build>
