--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -48,5 +48,10 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>de.cfranzen</groupId>
+            <artifactId>amqp</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
