--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -44,6 +44,11 @@
         </dependency>
         <dependency>
             <groupId>de.cfranzen</groupId>
+            <artifactId>amqp</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.cfranzen</groupId>
             <artifactId>clients</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
