--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,53 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>com.google.cloud.tools</groupId>
+                    <artifactId>jib-maven-plugin</artifactId>
+                    <version>3.2.0</version>
+                    <configuration>
+                        <from>
+                            <image>eclipse-temurin:17</image>
+                            <platforms>
+                                <platform>
+                                    <architecture>arm64</architecture>
+                                    <os>linux</os>
+                                </platform>
+                                <platform>
+                                    <architecture>amd64</architecture>
+                                    <os>linux</os>
+                                </platform>
+                            </platforms>
+                        </from>
+                        <to>
+                            <image>
+                                ghcr.io/cfranzen/microservices-playground/${project.artifactId}:${project.version}
+                            </image>
+                            <auth>
+                                <username>cfranzen</username>
+                                <password>${env.GITHUB_TOKEN}</password>
+                            </auth>
+                            <tags>
+                                <tag>latest</tag>
+                            </tags>
+                        </to>
+                        <container>
+                            <labels>
+                                <org.opencontainers.image.source>
+                                    https://github.com/cfranzen/microservices-playground
+                                </org.opencontainers.image.source>
+                            </labels>
+                        </container>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>build</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
