--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -24,4 +24,15 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-    enabled: false
+    enabled: true
+  instance:
+    metadataMap:
+      metrics.path: "/actuator/prometheus"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+    health:
+      show-details: 'always'
