--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -61,6 +61,14 @@
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+        <dependency>
             <groupId>de.cfranzen</groupId>
             <artifactId>amqp</artifactId>
             <version>${project.version}</version>
