Implemented log aggregation using graylog

--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -79,5 +79,10 @@
             <artifactId>amqp</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.cfranzen</groupId>
+            <artifactId>log-aggregation</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
