--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -47,5 +47,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
+        <dependency>
+            <groupId>de.cfranzen</groupId>
+            <artifactId>log-aggregation</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
