--- a/apigw/pom.xml
+++ b/apigw/pom.xml
@@ -59,5 +59,10 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>de.cfranzen</groupId>
+            <artifactId>log-aggregation</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
