--- a/notification/src/main/resources/application-docker.yml
+++ b/notification/src/main/resources/application-docker.yml
@@ -10,3 +10,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka-server:8761/eureka
+
+logging:
+  graylog:
+    host: graylog
