--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>notification</module>
         <module>apigw</module>
         <module>amqp</module>
+        <module>log-aggregation</module>
     </modules>
 
     <name>microservices</name>
