Added service dependency to blackbox-exporter

--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -215,6 +215,8 @@ services:
       - 9115:9115
     networks:
       - app
+    depends_on:
+      - prometheus
 
   grafana:
     image: grafana/grafana
