Migrated notification service to mongodb

--- a/notification/src/main/resources/application-kube.yml
+++ b/notification/src/main/resources/application-kube.yml
@@ -1,7 +1,8 @@
 spring:
   zipkin:
     base-url: http://zipkin:9411
-  datasource:
-    url: jdbc:postgresql://postgres:5432/notification
+  data:
+    mongodb:
+      host: 'mongo'
   rabbitmq:
     addresses: rabbitmq:5672
