--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -4,18 +4,12 @@ server:
 spring:
   application:
     name: notification
-  datasource:
-    username: 'microservices'
-    password: 'microservices'
-    url: jdbc:postgresql://localhost:5051/notification
-  jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: 'true'
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: 'true'
+  data:
+    mongodb:
+      host: 'localhost'
+      database: 'notification'
+      username: 'notification'
+      password: 'notification'
   zipkin:
     base-url: http://localhost:9411
   rabbitmq:
