--- a/apigw/src/main/resources/application.yml
+++ b/apigw/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
           uri: lb://CUSTOMER
           predicates:
             - Path=/api/v1/customers/**
+        - id: fraud
+          uri: lb://FRAUD
+          predicates:
+            - Path=/api/v1/fraud/**
 
 eureka:
   client:
