--- a/fraud/src/main/resources/application-docker.yml
+++ b/fraud/src/main/resources/application-docker.yml
@@ -3,6 +3,8 @@ spring:
     base-url: http://zipkin:9411
   datasource:
     url: jdbc:postgresql://postgres:5432/fraud
+  redis:
+    host: redis
 
 eureka:
   client:
