--- a/fraud/src/main/resources/application.yml
+++ b/fraud/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
     show-sql: 'true'
   zipkin:
     base-url: http://localhost:9411
+  redis:
+    host: localhost
+    port: 6379
+    timeout: 60000
+
 eureka:
   client:
     service-url:
@@ -34,6 +39,6 @@ management:
         include: '*'
     health:
       show-details: 'always'
-      
+
 logging:
   config: classpath:logback-graylog.xml
