--- a/clients/src/main/resources/clients-docker.properties
+++ b/clients/src/main/resources/clients-docker.properties
@@ -1,3 +1,3 @@
-clients.customer.url=http://customer:8080
-clients.fraud.url=http://fraud:8081
-clients.notification.url=http://notification:8082
+# We use Eureka Server for service discovery here
+clients.fraud.url=
+clients.notification.url=
