--- a/fraud-learning/src/main/resources/application-docker.yml
+++ b/fraud-learning/src/main/resources/application-docker.yml
@@ -1,12 +1,8 @@
 spring:
   zipkin:
     base-url: http://zipkin:9411
-  datasource:
-    url: jdbc:postgresql://postgres:5432/fraud
-  redis:
-    host: redis
   kafka:
-    producer:
+    consumer:
       bootstrap-servers: kafka:9092
 
 eureka:
