--- a/fraud-learning/src/main/resources/application.yml
+++ b/fraud-learning/src/main/resources/application.yml
@@ -1,29 +1,13 @@
 server:
-  port: 8081
+  port: 8084
 
 spring:
   application:
-    name: fraud
-  datasource:
-    username: 'microservices'
-    password: 'microservices'
-    url: jdbc:postgresql://localhost:5051/fraud
-  jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: 'true'
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: 'true'
+    name: fraud-learning
   zipkin:
     base-url: http://localhost:9411
-  redis:
-    host: localhost
-    port: 6379
-    timeout: 60000
   kafka:
-    producer:
+    consumer:
       bootstrap-servers: localhost:9093
 
 eureka:
