--- a/apigw/src/main/resources/application-docker.yml
+++ b/apigw/src/main/resources/application-docker.yml
@@ -1,12 +1,3 @@
 spring:
-  zipkin:
-    base-url: http://zipkin:9411
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka-server:8761/eureka
-
-logging:
-  graylog:
-    host: graylog
+  config:
+    import: configserver:http://config-server:8888
