--- a/apigw/src/main/resources/application.yml
+++ b/apigw/src/main/resources/application.yml
@@ -2,10 +2,10 @@ server:
   port: 8083
 
 spring:
+  config:
+    import: configserver:http://localhost:8888
   application:
     name: api-gateway
-  zipkin:
-    base-url: http://localhost:9411
   cloud:
     gateway:
       routes:
@@ -19,9 +19,6 @@ spring:
             - Path=/api/v1/fraud/**
 
 eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
   instance:
     metadataMap:
       metrics.path: "/actuator/prometheus"
