--- a/customer/src/main/resources/application-docker.yml
+++ b/customer/src/main/resources/application-docker.yml
@@ -1,16 +1,5 @@
 spring:
-  zipkin:
-    base-url: http://zipkin:9411
+  config:
+    import: configserver:http://config-server:8888
   datasource:
     url: jdbc:postgresql://postgres:5432/customer
-  rabbitmq:
-    addresses: rabbitmq:5672
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka-server:8761/eureka
-
-logging:
-  graylog:
-    host: graylog
