--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: customer
+  config:
+    import: configserver:http://localhost:8888
   datasource:
     username: 'microservices'
     password: 'microservices'
@@ -16,15 +18,8 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: 'true'
-  zipkin:
-    base-url: http://localhost:9411
-  rabbitmq:
-    addresses: localhost:5672
+
 eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-    enabled: true
   instance:
     metadataMap:
       metrics.path: "/actuator/prometheus"
