--- a/fraud-learning/src/main/resources/application-docker.yml
+++ b/fraud-learning/src/main/resources/application-docker.yml
@@ -1,15 +1,3 @@
 spring:
-  zipkin:
-    base-url: http://zipkin:9411
-  kafka:
-    consumer:
-      bootstrap-servers: kafka:9092
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka-server:8761/eureka
-
-logging:
-  graylog:
-    host: graylog
+  config:
+    import: configserver:http://config-server:8888
