--- a/fraud-learning/src/main/resources/application.yml
+++ b/fraud-learning/src/main/resources/application.yml
@@ -4,17 +4,10 @@ server:
 spring:
   application:
     name: fraud-learning
-  zipkin:
-    base-url: http://localhost:9411
-  kafka:
-    consumer:
-      bootstrap-servers: localhost:9093
-
+  config:
+    import: configserver:http://localhost:8888
+    
 eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-    enabled: true
   instance:
     metadataMap:
       metrics.path: "/actuator/prometheus"
