--- a/fraud/src/main/resources/application.yml
+++ b/fraud/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: fraud
+  config:
+    import: configserver:http://localhost:8888
   datasource:
     username: 'microservices'
     password: 'microservices'
@@ -16,21 +18,12 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: 'true'
-  zipkin:
-    base-url: http://localhost:9411
   redis:
     host: localhost
     port: 6379
     timeout: 60000
-  kafka:
-    producer:
-      bootstrap-servers: localhost:9093
 
 eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-    enabled: true
   instance:
     metadataMap:
       metrics.path: "/actuator/prometheus"
