--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -4,22 +4,16 @@ server:
 spring:
   application:
     name: notification
+  config:
+    import: configserver:http://localhost:8888
   data:
     mongodb:
       host: 'localhost'
       database: 'notification'
       username: 'notification'
       password: 'notification'
-  zipkin:
-    base-url: http://localhost:9411
-  rabbitmq:
-    addresses: localhost:5672
 
 eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-    enabled: true
   instance:
     metadataMap:
       metrics.path: "/actuator/prometheus"
