--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>log-aggregation</module>
         <module>fraud-learning</module>
         <module>kafka</module>
+        <module>config-server</module>
     </modules>
 
     <name>microservices</name>
