--- a/config-server/src/main/resources/configs/docker/application.yml
+++ b/config-server/src/main/resources/configs/docker/application.yml
@@ -4,6 +4,8 @@ spring:
   kafka:
     producer:
       bootstrap-servers: kafka:9092
+    consumer:
+      bootstrap-servers: kafka:9092
   rabbitmq:
     addresses: rabbitmq:5672
 
