Fix URL of config server in docker environment

--- a/apigw/src/main/resources/application.yml
+++ b/apigw/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   config:
-    import: optional:configserver:http://localhost:8888,optional:configserver:http://config-server:8888
+    import: optional:configserver:http://localhost:8888
   application:
     name: api-gateway
   cloud:
