--- a/fraud/src/main/resources/application-docker.yml
+++ b/fraud/src/main/resources/application-docker.yml
@@ -1,4 +1,6 @@
 spring:
+  config:
+    import: optional:configserver:http://config-server:8888
   datasource:
     url: jdbc:postgresql://postgres:5432/fraud
   redis:
