--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: notification
   config:
-    import: optional:configserver:http://localhost:8888,optional:configserver:http://config-server:8888
+    import: optional:configserver:http://localhost:8888
   data:
     mongodb:
       host: 'localhost'
