--- a/customer/src/main/resources/application-docker.yml
+++ b/customer/src/main/resources/application-docker.yml
@@ -1,3 +1,5 @@
 spring:
+  config:
+    import: optional:configserver:http://config-server:8888
   datasource:
     url: jdbc:postgresql://postgres:5432/customer
