--- a/fraud-learning/src/main/resources/application.yml
+++ b/fraud-learning/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: fraud-learning
   config:
-    import: optional:configserver:http://localhost:8888,optional:configserver:http://config-server:8888
+    import: optional:configserver:http://localhost:8888
 
 eureka:
   instance:
