Properly configure eureka registration to avoid problem with split tunnel VPN

--- a/config-server/src/main/resources/configs/application.yml
+++ b/config-server/src/main/resources/configs/application.yml
@@ -10,6 +10,8 @@ spring:
     addresses: localhost:5672
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
